# win-key

./: .gitignore  CMakeLists.txt  README.md  app.rc  win-key.json  winkey.json
.github/workflows/: buildAndUpload.yaml
include/: resource.h
src/: main.cpp
